--- a/k8s/node-fortune.yml
+++ b/k8s/node-fortune.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nodefortunes
-        image: abree05/k8-node-fortune:latest
+        image: dockerhub/nodeimage
         env:
         - name: NODE_ENV
           value: prod
